<resources>
    <string name="app_name">TrackerOfTheRings</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">PREVIOUS</string>
    <string name="company_id">Company ID</string>
    <string name="welcome">Welcome to the Tracker of the Rings</string>
    <string name="user">User</string>
    <string name="stops">Stops</string>
    <string name="routes">Routes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="driver">Driver</string>
    <string name="login">Login</string>
    <string name="company">Company</string>
    <string name="vehicles">Vehicles</string>
</resources>